--- a/JDBCBank/pom.xml
+++ b/JDBCBank/pom.xml
@@ -3,11 +3,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.revaturedec17</groupId>
-  <artifactId>project0</artifactId>
+  <artifactId>jdbcbank</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>project0</name>
+  <name>jdbcbank</name>
   <url>http://maven.apache.org</url>
 	
 
